--- a/Prs_Blog.html
+++ b/Prs_Blog.html
@@ -6,6 +6,9 @@
     <body>
         <h1>Welcome to my Web Side</h1>
         Hello friends!
+        My name is Oliver Garcia and I am very happy to see you all visiting my web page. In it, you'll learn some fun facts about me.
+        
+        <h2>Most interesting fun facts about me:</h2>
     </body>
 
 </html>
