greeting the world as well

--- a/Prs_Blog.html
+++ b/Prs_Blog.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my Web Side</h1>
-        Hello friends!
+        Hello friends! and, hello world!
         My name is Oliver Garcia and I am very happy to see you all visiting my web page. In it, you'll learn some fun facts about me.
         
         <h2>Most interesting fun facts about me:</h2>
